Start to impalmets front-end

--- a/Module.FrontEnd/src/app/Pages/main/main.component.html
+++ b/Module.FrontEnd/src/app/Pages/main/main.component.html
@@ -1,9 +1,9 @@
 <h1>Welcome, Please select a module:</h1>
 <ul>
     <li>
-        <a href="">Department</a>
+        <a routerLink="/Department">Department</a>
     </li>
     <li>
-        <a href="">Notification</a>
+        <a routerLink="/Notification">Notification</a>
     </li>
 </ul>
