--- a/Module.FrontEnd/src/app/Modules/Department/Pages/add/add.component.html
+++ b/Module.FrontEnd/src/app/Modules/Department/Pages/add/add.component.html
@@ -1,1 +1,21 @@
-<p>add works!</p>
+<div class="container">
+    <div>
+
+    </div>
+    <div>
+        <form>
+            <div>
+                <label for="name" class="form-label" class="form-label">Name:</label>
+                <input type="text" id="name" name="name" class="form-control">
+            </div>
+            <div>
+                <label for="logo">Logo:</label>
+                <input type="file" name="logo" id="logo" class="form-control">
+            </div>
+            <div>
+                <button type="submit">Save</button>
+            </div>
+        </form>
+    </div>
+
+</div>
