--- a/Module.FrontEnd/src/app/Modules/Department/Pages/get/get.component.html
+++ b/Module.FrontEnd/src/app/Modules/Department/Pages/get/get.component.html
@@ -1,1 +1,29 @@
-<p>get works!</p>
+<div class="container">
+    <div>
+        <h2 *ngIf="!DepartmentId">Main Page</h2>
+        <h2 *ngIf="DepartmentId">SubDepartment of {{DepartmentInfo?.departmentName}}</h2>
+    </div>
+    <div>
+        <a class="btn btn-outline-danger" routerLink="/Department/add" [queryParams]="{DepartmentId}">Add</a>
+    </div>
+    <div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Department</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let department of Departments">
+                    <td>{{department.id}}</td>
+                    <td>{{department.departmentName}}</td>
+                    <td>
+                        <a class="btn btn-outline-primary" routerLink="/Department" [queryParams]="{DepartmentId:department.id}">Show SubDepartment</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
